[gd_scene load_steps=82 format=2]

[ext_resource path="res://SelectUser.gd" type="Script" id=1]
[ext_resource path="res://Fonts/SuperMario256.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Button/Arrow/botaoSelect-Hover.png" type="Texture" id=3]
[ext_resource path="res://UI/Button/Arrow/botaoSelect-Pressed.png" type="Texture" id=4]
[ext_resource path="res://UI/Button/Arrow/botaoSelect-Normal.png" type="Texture" id=5]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00000.png" type="Texture" id=6]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00001.png" type="Texture" id=7]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00002.png" type="Texture" id=8]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00003.png" type="Texture" id=9]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00004.png" type="Texture" id=10]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00005.png" type="Texture" id=11]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00006.png" type="Texture" id=12]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00007.png" type="Texture" id=13]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00008.png" type="Texture" id=14]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00009.png" type="Texture" id=15]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00010.png" type="Texture" id=16]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00011.png" type="Texture" id=17]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00012.png" type="Texture" id=18]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00013.png" type="Texture" id=19]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00014.png" type="Texture" id=20]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00015.png" type="Texture" id=21]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00016.png" type="Texture" id=22]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00017.png" type="Texture" id=23]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00018.png" type="Texture" id=24]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00019.png" type="Texture" id=25]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00020.png" type="Texture" id=26]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00021.png" type="Texture" id=27]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00022.png" type="Texture" id=28]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00023.png" type="Texture" id=29]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00024.png" type="Texture" id=30]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00025.png" type="Texture" id=31]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00026.png" type="Texture" id=32]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00027.png" type="Texture" id=33]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00028.png" type="Texture" id=34]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00029.png" type="Texture" id=35]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00030.png" type="Texture" id=36]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00031.png" type="Texture" id=37]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00032.png" type="Texture" id=38]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00033.png" type="Texture" id=39]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00034.png" type="Texture" id=40]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00035.png" type="Texture" id=41]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00036.png" type="Texture" id=42]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00037.png" type="Texture" id=43]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00038.png" type="Texture" id=44]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00039.png" type="Texture" id=45]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00040.png" type="Texture" id=46]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00041.png" type="Texture" id=47]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00042.png" type="Texture" id=48]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00043.png" type="Texture" id=49]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00044.png" type="Texture" id=50]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00045.png" type="Texture" id=51]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00046.png" type="Texture" id=52]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00047.png" type="Texture" id=53]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00048.png" type="Texture" id=54]
[ext_resource path="res://Dino_Spike_Prefab/Dino_Spike_Idle/Dino-spike-idle_00049.png" type="Texture" id=55]
[ext_resource path="res://Dino_Prefab/Dino-Idle/Dino-idle_00000.png" type="Texture" id=56]
[ext_resource path="res://Dino_Prefab/Dino-Idle/Dino-idle_00001.png" type="Texture" id=57]
[ext_resource path="res://Dino_Prefab/Dino-Idle/Dino-idle_00002.png" type="Texture" id=58]
[ext_resource path="res://Dino_Prefab/Dino-Idle/Dino-idle_00003.png" type="Texture" id=59]
[ext_resource path="res://Dino_Prefab/Dino-Idle/Dino-idle_00004.png" type="Texture" id=60]
[ext_resource path="res://Dino_Prefab/Dino-Idle/Dino-idle_00005.png" type="Texture" id=61]
[ext_resource path="res://Dino_Prefab/Dino-Idle/Dino-idle_00006.png" type="Texture" id=62]
[ext_resource path="res://Dino_Prefab/Dino-Idle/Dino-idle_00007.png" type="Texture" id=63]
[ext_resource path="res://Dino_Prefab/Dino-Idle/Dino-idle_00008.png" type="Texture" id=64]
[ext_resource path="res://Dino_Prefab/Dino-Idle/Dino-idle_00009.png" type="Texture" id=65]
[ext_resource path="res://Dino_Prefab/Dino-Idle/Dino-idle_00010.png" type="Texture" id=66]
[ext_resource path="res://Dino_Prefab/Dino-Idle/Dino-idle_00011.png" type="Texture" id=67]
[ext_resource path="res://UI/Button/Select/botaoArrow-Hover.png" type="Texture" id=68]
[ext_resource path="res://UI/Button/Select/botaoArrow-Pressed.png" type="Texture" id=69]
[ext_resource path="res://UI/Button/Select/botaoArrow-Normal.png" type="Texture" id=70]

[sub_resource type="DynamicFont" id=1]
size = 50
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 323, 323 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 323, 323 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 323, 323 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 323, 323 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ) ],
"loop": true,
"name": "spikeIdle",
"speed": 10.0
}, {
"frames": [ ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ) ],
"loop": true,
"name": "trexIdle",
"speed": 10.0
} ]

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 68 )
region_rect = Rect2( 0, 0, 570, 272 )
expand_margin_left = 30.0

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 69 )
region_rect = Rect2( 0, 0, 570, 272 )
expand_margin_left = 30.0

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 69 )
region_rect = Rect2( 0, 0, 570, 272 )
expand_margin_left = 30.0

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 70 )
region_rect = Rect2( 0, 0, 570, 274 )
expand_margin_left = 30.0

[sub_resource type="DynamicFont" id=11]
size = 50
use_filter = true
font_data = ExtResource( 2 )

[node name="SelectUser" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 14.2801
margin_top = 22.2134
margin_right = 836.28
margin_bottom = 73.2134
rect_scale = Vector2( 1.47709, 1.47709 )
custom_fonts/font = SubResource( 1 )
text = "Selecione o seu dinossauro !!"

[node name="btnTrex" type="Button" parent="."]
margin_left = 40.0
margin_top = 147.681
margin_right = 55.0
margin_bottom = 162.681
rect_scale = Vector2( 15, 15 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="btnTrex"]
position = Vector2( 7.4325, 7.02399 )
scale = Vector2( 0.0178852, 0.0218582 )
frames = SubResource( 6 )
animation = "trexIdle"
speed_scale = 1.5
playing = true

[node name="btnSpike" type="Button" parent="."]
margin_left = 309.8
margin_top = 147.681
margin_right = 324.8
margin_bottom = 162.681
rect_scale = Vector2( 15, 15 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="btnSpike"]
position = Vector2( 9.77588, 6.83398 )
scale = Vector2( 0.0178852, 0.0218582 )
frames = SubResource( 6 )
animation = "spikeIdle"
frame = 24
speed_scale = 2.0
playing = true

[node name="btnSpike2" type="Button" parent="."]
margin_left = 580.0
margin_top = 147.681
margin_right = 595.0
margin_bottom = 162.681
rect_scale = Vector2( 15, 15 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="btnSpike2"]
position = Vector2( 7.33325, 6.83398 )
scale = Vector2( 0.0178852, 0.0218582 )
frames = SubResource( 6 )
animation = "trexIdle"
frame = 4
speed_scale = 2.0
playing = true

[node name="btnSpike3" type="Button" parent="."]
margin_left = 850.0
margin_top = 147.681
margin_right = 865.0
margin_bottom = 162.681
rect_scale = Vector2( 15, 15 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="btnSpike3"]
position = Vector2( 9.77588, 6.83398 )
scale = Vector2( 0.0178852, 0.0218582 )
frames = SubResource( 6 )
animation = "spikeIdle"
frame = 22
speed_scale = 2.0
playing = true

[node name="btnSpike4" type="Button" parent="."]
margin_left = 1120.0
margin_top = 147.681
margin_right = 1135.0
margin_bottom = 162.681
rect_scale = Vector2( 15, 15 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="btnSpike4"]
position = Vector2( 9.77588, 6.83398 )
scale = Vector2( 0.0178852, 0.0218582 )
frames = SubResource( 6 )
animation = "spikeIdle"
frame = 22
speed_scale = 2.0
playing = true

[node name="btnMenuPrincipal" type="Button" parent="."]
margin_left = 20.0
margin_top = 670.0
margin_right = 669.0
margin_bottom = 921.0
rect_scale = Vector2( 0.396743, 0.345005 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
text = "Menu Principal"
[connection signal="pressed" from="btnTrex" to="." method="_on_btnTrex_pressed"]
[connection signal="pressed" from="btnSpike" to="." method="_on_btnSpike_pressed"]
[connection signal="pressed" from="btnMenuPrincipal" to="." method="_on_menuprincipal_pressed"]
